src/main/java/com/khubla/phpGrammar/PHPParser.java
// Generated from com/khubla/phpGrammar/PHPParser.g4 by ANTLR 4.1
package com.khubla.phpGrammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PHPParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SingleQuotedString=79, HexNumber=74, Switch=24, Html=3, Pipe=39, Array=69, 
		Static=66, OpenSquareBracket=58, Forwardslash=45, OpenRoundBracket=56, 
		OctalNumber=75, SinglelineComment=67, Extends=22, While=34, HtmlWS=4, 
		Case=25, Percent=44, ComparisionOperator=85, ClassMember=54, CloseSquareBracket=59, 
		Identifier=82, Xor=15, Global=16, Default=26, CloseRoundBracket=57, AssignmentOperator=83, 
		DoubleQuotedString=81, IncrementOperator=87, PHPStart=1, Digits=77, Implements=19, 
		Interface=62, Do=23, EscapeCharacter=80, UnixComment=68, Class=21, Or=14, 
		PHPO=2, Return=18, Clone=37, Dollar=49, MultiLineComment=6, If=29, And=11, 
		Tilde=46, SemiColon=9, Asterisk=43, InstanceMember=47, Continue=17, As=8, 
		ShiftOperator=86, LogicalOr=52, AccessModifier=72, LogicalAnd=53, PrimitiveType=71, 
		ElseIf=31, Colon=64, DecimalNumber=73, Const=13, For=32, Foreach=33, List=12, 
		RequireOperator=70, CloseCurlyBracket=61, Ampersand=38, Float=76, Plus=41, 
		Bang=40, Minus=42, WS=88, SuppressWarnings=48, Break=28, Function=27, 
		New=36, Boolean=78, OpenCurlyBracket=60, Instanceof=10, Dot=50, RealE=7, 
		QuestionMark=55, ArrayAssign=51, EqualityOperator=84, Else=30, Comma=63, 
		Equals=35, Var=20, PHPEnd=5, Abstract=65;
	public static final String[] tokenNames = {
		"<INVALID>", "PHPStart", "'<'", "Html", "HtmlWS", "'?>'", "MultiLineComment", 
		"RealE", "'as'", "';'", "'instanceof'", "'and'", "'list'", "'const'", 
		"'or'", "'xor'", "'global'", "'continue'", "'return'", "'implements'", 
		"'var'", "'class'", "'extends'", "'do'", "'switch'", "'case'", "'default'", 
		"'function'", "'break'", "'if'", "'else'", "'elseif'", "'for'", "'foreach'", 
		"'while'", "'='", "'new'", "'clone'", "'&'", "'|'", "'!'", "'+'", "'-'", 
		"'*'", "'%'", "'/'", "'~'", "'->'", "'@'", "'$'", "'.'", "'=>'", "'||'", 
		"'&&'", "'::'", "'?'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'Interface'", 
		"','", "':'", "'abstract'", "'static'", "SinglelineComment", "UnixComment", 
		"Array", "RequireOperator", "PrimitiveType", "AccessModifier", "DecimalNumber", 
		"HexNumber", "OctalNumber", "Float", "Digits", "Boolean", "SingleQuotedString", 
		"EscapeCharacter", "DoubleQuotedString", "Identifier", "AssignmentOperator", 
		"EqualityOperator", "ComparisionOperator", "ShiftOperator", "IncrementOperator", 
		"WS"
	};
	public static final int
		RULE_prog = 0, RULE_htmlblock = 1, RULE_html = 2, RULE_phpBlock = 3, RULE_prolog = 4, 
		RULE_epilog = 5, RULE_statement = 6, RULE_complexStatement = 7, RULE_forstatement = 8, 
		RULE_ifstatement = 9, RULE_foreachstatement = 10, RULE_whilestatement = 11, 
		RULE_dostatement = 12, RULE_switchstatement = 13, RULE_simpleStatement = 14, 
		RULE_globalStatement = 15, RULE_staticVariableAssignmentStatement = 16, 
		RULE_breakStatement = 17, RULE_continueStatement = 18, RULE_returnStatement = 19, 
		RULE_requireStatement = 20, RULE_cases = 21, RULE_casestatement = 22, 
		RULE_defaultcase = 23, RULE_singlelinecomment = 24, RULE_variable = 25, 
		RULE_variablename = 26, RULE_name = 27, RULE_staticMemberAccess = 28, 
		RULE_memberAccess = 29, RULE_bracketedBlock = 30, RULE_interfaceDefinition = 31, 
		RULE_interfaceName = 32, RULE_interfaceExtends = 33, RULE_interfaceMember = 34, 
		RULE_className = 35, RULE_classDefinition = 36, RULE_classImplements = 37, 
		RULE_classMember = 38, RULE_classModifier = 39, RULE_constDefinition = 40, 
		RULE_fieldDefinition = 41, RULE_fieldModifier = 42, RULE_fieldName = 43, 
		RULE_functionDefinition = 44, RULE_parametersDefinition = 45, RULE_functionInvocation = 46, 
		RULE_functionName = 47, RULE_functionInvocationParameters = 48, RULE_paramDef = 49, 
		RULE_paramName = 50, RULE_commaList = 51, RULE_expression = 52, RULE_weakLogicalOr = 53, 
		RULE_weakLogicalXor = 54, RULE_weakLogicalAnd = 55, RULE_assignment = 56, 
		RULE_listVariables = 57, RULE_ternary = 58, RULE_logicalOr = 59, RULE_logicalAnd = 60, 
		RULE_bitwiseOr = 61, RULE_bitWiseAnd = 62, RULE_equalityCheck = 63, RULE_comparisionCheck = 64, 
		RULE_bitWiseShift = 65, RULE_addition = 66, RULE_multiplication = 67, 
		RULE_logicalNot = 68, RULE_instanceOf = 69, RULE_negateOrCast = 70, RULE_increment = 71, 
		RULE_newOrClone = 72, RULE_atomOrReference = 73, RULE_arrayDeclaration = 74, 
		RULE_arrayEntry = 75, RULE_keyValuePair = 76, RULE_atom = 77, RULE_reference = 78, 
		RULE_bool = 79, RULE_number = 80, RULE_integer = 81, RULE_real = 82, RULE_string = 83;
	public static final String[] ruleNames = {
		"prog", "htmlblock", "html", "phpBlock", "prolog", "epilog", "statement", 
		"complexStatement", "forstatement", "ifstatement", "foreachstatement", 
		"whilestatement", "dostatement", "switchstatement", "simpleStatement", 
		"globalStatement", "staticVariableAssignmentStatement", "breakStatement", 
		"continueStatement", "returnStatement", "requireStatement", "cases", "casestatement", 
		"defaultcase", "singlelinecomment", "variable", "variablename", "name", 
		"staticMemberAccess", "memberAccess", "bracketedBlock", "interfaceDefinition", 
		"interfaceName", "interfaceExtends", "interfaceMember", "className", "classDefinition", 
		"classImplements", "classMember", "classModifier", "constDefinition", 
		"fieldDefinition", "fieldModifier", "fieldName", "functionDefinition", 
		"parametersDefinition", "functionInvocation", "functionName", "functionInvocationParameters", 
		"paramDef", "paramName", "commaList", "expression", "weakLogicalOr", "weakLogicalXor", 
		"weakLogicalAnd", "assignment", "listVariables", "ternary", "logicalOr", 
		"logicalAnd", "bitwiseOr", "bitWiseAnd", "equalityCheck", "comparisionCheck", 
		"bitWiseShift", "addition", "multiplication", "logicalNot", "instanceOf", 
		"negateOrCast", "increment", "newOrClone", "atomOrReference", "arrayDeclaration", 
		"arrayEntry", "keyValuePair", "atom", "reference", "bool", "number", "integer", 
		"real", "string"
	};

	@Override
	public String getGrammarFileName() { return "PHPParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public PHPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<HtmlblockContext> htmlblock() {
			return getRuleContexts(HtmlblockContext.class);
		}
		public List<PhpBlockContext> phpBlock() {
			return getRuleContexts(PhpBlockContext.class);
		}
		public PhpBlockContext phpBlock(int i) {
			return getRuleContext(PhpBlockContext.class,i);
		}
		public HtmlblockContext htmlblock(int i) {
			return getRuleContext(HtmlblockContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PHPParserListener ) ((PHPParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PHPParserListener ) ((PHPParserListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PHPStart) | (1L << PHPO) | (1L << Html))) != 0)) {
				{
				setState(170);
				switch (_input.LA(1)) {
				case PHPStart:
					{
					setState(168); phpBlock();
					}
					break;
				case PHPO:
				case Html:
					{
					setState(169); htmlblock();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HtmlblockContext extends ParserRuleContext {
		public HtmlContext html(int i) {
			return getRuleContext(HtmlContext.class,i);
		}
		public List<HtmlContext> html() {
			return getRuleContexts(HtmlContext.class);
		}
		public TerminalNode PHPO() { return getToken(PHPParser.PHPO, 0); }
		public HtmlblockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlblock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PHPParserListener ) ((PHPParserListener)listener).enterHtmlblock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PHPParserListener ) ((PHPParserListener)listener).exitHtmlblock(this);
		}
	}

	public final HtmlblockContext htmlblock() throws RecognitionException {
		HtmlblockContext _localctx = new HtmlblockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_htmlblock);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			_la = _input.LA(1);
			if (_la==PHPO) {
				{
				setState(175); match(PHPO);
				}
			}

			setState(179); 
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(178); html();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(181); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=-1 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HtmlContext extends ParserRuleContext {
		public TerminalNode Html() { return getToken(PHPParser.Html, 0); }
		public HtmlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_html; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PHPParserListener ) ((PHPParserListener)listener).enterHtml(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PHPParserListener ) ((PHPParserListener)listener).exitHtml(this);
		}
	}

	public final HtmlContext html() throws RecognitionException {
		HtmlContext _localctx = new HtmlContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_html);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183); match(Html);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PhpBlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public EpilogContext epilog() {
			return getRuleContext(EpilogContext.class,0);
		}
		public PrologContext prolog() {
			return getRuleContext(PrologContext.class,0);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public PhpBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_phpBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PHPParserListener ) ((PHPParserListener)listener).enterPhpBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PHPParserListener ) ((PHPParserListener)listener).exitPhpBlock(this);
		}
	}

	public final PhpBlockContext phpBlock() throws RecognitionException {
		PhpBlockContext _localctx = new PhpBlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_phpBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185); prolog();
			setState(189);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << List) | (1L << Global) | (1L << Continue) | (1L << Return) | (1L << Class) | (1L << Do) | (1L << Switch) | (1L << Function) | (1L << Break) | (1L << If) | (1L << For) | (1L << Foreach) | (1L << While) | (1L << New) | (1L << Clone) | (1L << Ampersand) | (1L << Bang) | (1L << Minus) | (1L << Tilde) | (1L << SuppressWarnings) | (1L << Dollar) | (1L << OpenRoundBracket) | (1L << OpenCurlyBracket) | (1L << Interface))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (Abstract - 65)) | (1L << (Static - 65)) | (1L << (SinglelineComment - 65)) | (1L << (Array - 65)) | (1L << (RequireOperator - 65)) | (1L << (DecimalNumber - 65)) | (1L << (HexNumber - 65)) | (1L << (OctalNumber - 65)) | (1L << (Float - 65)) | (1L << (Boolean - 65)) | (1L << (SingleQuotedString - 65)) | (1L << (DoubleQuotedString - 65)) | (1L << (Identifier - 65)) | (1L << (IncrementOperator - 65)))) != 0)) {
				{
				{
				setState(186); statement();
				}
				}
				setState(191);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(193);
			_la = _input.LA(1);
			if (_la==PHPEnd) {
				{
				setState(192); epilog();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrologContext extends ParserRuleContext {
		public TerminalNode PHPStart() { return getToken(PHPParser.PHPStart, 0); }
		public PrologContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prolog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PHPParserListener ) ((PHPParserListener)listener).enterProlog(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PHPParserListener ) ((PHPParserListener)listener).exitProlog(this);
		}
	}

	public final PrologContext prolog() throws RecognitionException {
		PrologContext _localctx = new PrologContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_prolog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(195); match(PHPStart);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EpilogContext extends ParserRuleContext {
		public TerminalNode PHPEnd() { return getToken(PHPParser.PHPEnd, 0); }
		public EpilogContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_epilog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PHPParserListener ) ((PHPParserListener)listener).enterEpilog(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PHPParserListener ) ((PHPParserListener)listener).exitEpilog(this);
		}
	}

	public final EpilogContext epilog() throws RecognitionException {
		EpilogContext _localctx = new EpilogContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_epilog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197); match(PHPEnd);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public ComplexStatementContext complexStatement() {
			return getRuleContext(ComplexStatementContext.class,0);
		}
		public InterfaceDefinitionContext interfaceDefinition() {
			return getRuleContext(InterfaceDefinitionContext.class,0);
		}
		public BracketedBlockContext bracketedBlock() {
			return getRuleContext(BracketedBlockContext.class,0);
		}
		public SinglelinecommentContext singlelinecomment() {
			return getRuleContext(SinglelinecommentContext.class,0);
		}
		public ClassDefinitionContext classDefinition() {
			return getRuleContext(ClassDefinitionContext.class,0);
		}
		public SimpleStatementContext simpleStatement() {
			return getRuleContext(SimpleStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PHPParserListener ) ((PHPParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PHPParserListener ) ((PHPParserListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement);
		try {
			setState(211);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(199); match(OpenCurlyBracket);
				setState(200); statement();
				setState(201); match(CloseCurlyBracket);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(203); bracketedBlock();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(204); classDefinition();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(205); interfaceDefinition();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(206); complexStatement();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(207); simpleStatement();
				setState(208); match(SemiColon);
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(210); singlelinecomment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComplexStatementContext extends ParserRuleContext {
		public IfstatementContext ifstatement() {
			return getRuleContext(IfstatementContext.class,0);
		}
		public WhilestatementContext whilestatement() {
			return getRuleContext(WhilestatementContext.class,0);
		}
		public DostatementContext dostatement() {
			return getRuleContext(DostatementContext.class,0);
		}
		public ForstatementContext forstatement() {
			return getRuleContext(ForstatementContext.class,0);
		}
		public SwitchstatementContext switchstatement() {
			return getRuleContext(SwitchstatementContext.class,0);
		}
		public FunctionDefinitionContext functionDefinition() {
			return getRuleContext(FunctionDefinitionContext.class,0);
		}
		public ForeachstatementContext foreachstatement() {
			return getRuleContext(ForeachstatementContext.class,0);
		}
		public ComplexStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_complexStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PHPParserListener ) ((PHPParserListener)listener).enterComplexStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PHPParserListener ) ((PHPParserListener)listener).exitComplexStatement(this);
		}
	}

	public final ComplexStatementContext complexStatement() throws RecognitionException {
		ComplexStatementContext _localctx = new ComplexStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_complexStatement);
		try {
			setState(220);
			switch (_input.LA(1)) {
			case If:
				enterOuterAlt(_localctx, 1);
				{
				setState(213); ifstatement();
				}
				break;
			case For:
				enterOuterAlt(_localctx, 2);
				{
				setState(214); forstatement();
				}
				break;
			case Foreach:
				enterOuterAlt(_localctx, 3);
				{
				setState(215); foreachstatement();
				}
				break;
			case While:
				enterOuterAlt(_localctx, 4);
				{
				setState(216); whilestatement();
				}
				break;
			case Do:
				enterOuterAlt(_localctx, 5);
				{
				setState(217); dostatement();
				}
				break;
			case Switch:
				enterOuterAlt(_localctx, 6);
				{
				setState(218); switchstatement();
				}
				break;
			case Function:
				enterOuterAlt(_localctx, 7);
				{
				setState(219); functionDefinition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForstatementContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode For() { return getToken(PHPParser.For, 0); }
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ForstatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forstatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PHPParserListener ) ((PHPParserListener)listener).enterForstatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PHPParserListener ) ((PHPParserListener)listener).exitForstatement(this);
		}
	}

	public final ForstatementContext forstatement() throws RecognitionException {
		ForstatementContext _localctx = new ForstatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_forstatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(222); match(For);
			setState(223); match(OpenRoundBracket);
			setState(224); expression();
			setState(225); match(SemiColon);
			setState(226); expression();
			setState(227); match(SemiColon);
			setState(228); expression();
			setState(229); match(CloseRoundBracket);
			setState(230); statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfstatementContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode ElseIf(int i) {
			return getToken(PHPParser.ElseIf, i);
		}
		public TerminalNode Else() { return getToken(PHPParser.Else, 0); }
		public TerminalNode If() { return getToken(PHPParser.If, 0); }
		public List<TerminalNode> ElseIf() { return getTokens(PHPParser.ElseIf); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public IfstatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifstatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PHPParserListener ) ((PHPParserListener)listener).enterIfstatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PHPParserListener ) ((PHPParserListener)listener).exitIfstatement(this);
		}
	}
